# statview

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.ghcr.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 9e069838771d_initial_schema.py
app/: __init__.py  config.py  dashboards.py  db.py  extensions.py  label_filters.py  main.py  models.py  prometheus.py  routes.py  saved_views.py
app/auth/: __init__.py  config.py  errors.py  gate.py  github.py  policy.py  registration.py  routes.py
app/services/: __init__.py  view_backend.py
app/static/: app.js  styles.css
app/templates/: alerts.html  auth_forbidden.html  auth_unavailable.html  config_error.html  dashboard_detail.html  dashboards.html  index.html  layout.html  login.html  metric_panel.html  metrics.html  prometheus_unavailable.html  saved.html
scripts/: entrypoint.sh
tests/: conftest.py  test_auth_config.py  test_auth_disabled.py  test_auth_gate.py  test_auth_github.py  test_auth_policy.py  test_auth_routes.py  test_dashboards.py  test_label_filters.py  test_main.py  test_models.py  test_prometheus.py  test_saved_views.py  test_startup_misconfig.py  test_support.py  test_view_backend.py
tools/: check.sh  common.sh  db.sh  run-dev.sh  test.sh
