[project]
name = "statview"
version = "0.1.0"
description = "Prometheus metric explorer with HTMX and Chart.js"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.4",
  "authlib>=1.3,<2",
  "flask>=3.0.0",
  "flask-migrate>=4.1.0",
  "flask-sqlalchemy>=3.1.1",
  "gunicorn>=22.0.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "requests>=2.32.0",
  "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
